[Password Manager] Submission metrics fix.

The submission metrics are recorded when Password Manager knows whether
submission was successful or not. But it turned out that sometimes
information about submitted form is cleared before the moment when
success of the submission is known. Actually clearing form information
is wrong. This CL makes that form information is left.

Bug: 827110

Change-Id: I53d3de461ae6f7dd53afb07f8c084e36f05f4767
Reviewed-on: https://chromium-review.googlesource.com/986134
Commit-Queue: Dominic Battré <battre@chromium.org>
Reviewed-by: Dominic Battré <battre@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546850}
Former-commit-id: 6a28a1a3605ebeb89beac600ea8f844b3a594314